Add EVENTD voice

--- a/_includes/voice-table.html
+++ b/_includes/voice-table.html
@@ -1,4 +1,4 @@
-{% assign whitelist = "APPRECIATION,DAILY,EVENTA,EVENTB,EVENTC,HERO,HERO2,PLAYER,PLAYER2,RELATION,TOUCH,TOUCH2,TRAIN,TRAINED" | split: "," %}
+{% assign whitelist = "APPRECIATION,DAILY,EVENTA,EVENTB,EVENTC,EVENTD,HERO,HERO2,PLAYER,PLAYER2,RELATION,TOUCH,TOUCH2,TRAIN,TRAINED" | split: "," %}
 {% assign names = include.resourceName | split: "," %}
 
 {% assign manual = "battleStart,action,attack,skill,special,smallDamage,bigDamage,win,lose,assist,assisted,loveIndexMax,rankMax,salesStart,salesEnd" | split: "," %}
