--- a/_includes/skill-description.html
+++ b/_includes/skill-description.html
@@ -11,7 +11,7 @@
 
 {% for skillEffect in randomGroup.items %}
 {% comment %}Exclude skill tree effect for now{% endcomment %}
-{% if skillEffect.prob > 0 and skillEffect.conditionEntityId == 0 %}
+{% if skillEffect.prob > 0 and skillEffect.conditionEntityId == 0 and skillEffect.skillEffectId != 3024 %}
   {% include skill-effect-description-v2.html skillEffect=skillEffect timing=include.skill.timing %}
 {% endif %}
 {% endfor %}
