--- a/_includes/skill-timing.html
+++ b/_includes/skill-timing.html
@@ -45,6 +45,8 @@ when receiving damage
 Always active
 {% when 27 %}
 current action end
+{% when 33 %}
+when an ally is damaged
 {% else %}
 unknown timing ({{ include.timing }})
 {% endcase %}
