Update wiki msg

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content{% if page.wide_content %}__wider{% endif %}">
     <aside class="wiki-msg">    
-        LAH community survey and popularity poll (2024 edition) is coming back! Please take some time to fill up this <a href="https://docs.google.com/forms/d/e/1FAIpQLSf-2PBkqK3Hb2m8T-3b4OsT8bq1Bdlreo5SiIu_JvBEdeqcVA/viewform?usp=sf_link">Google Form</a>!
+        LAH community survey and popularity poll (2024 edition) has ended, result will be compiled and released in Wiki Blog in about a month.</aside>
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
