--- a/_includes/skill-table-v2.html
+++ b/_includes/skill-table-v2.html
@@ -13,6 +13,6 @@
 {% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
     <div title="{{ sid }}" class="translate re-A" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</div>
     <div class="re-C">{{ skill.useView}}</div>
-    <div class="re-B" title="{{ skill.description }}">{% include skill-description.html skillId=nid skill=skill %}</div>
+    <div class="re-B" title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skillId=nid skill=skill %}</div>
 {% endfor %}
 </div>
