--- a/_includes/skill-table.html
+++ b/_includes/skill-table.html
@@ -15,7 +15,7 @@
     {% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
     <tr>
         <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td>
-        <td title="{{ skill.description }}">{% include skill-description.html skillId=nid skill=skill %}</td>
+        <td title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skillId=nid skill=skill %}</td>
         <td>{{ skill.useView }}</td>
     </tr>
     {% endfor %}
