Implement basic chara page filter

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -575,6 +575,12 @@ $elementName: fire, water, earth, light, shadow;
 .has-unit {
   background: $colorLight;
 }
+.filter-on {
+  opacity: 0.5;
+}
+.filtered {
+  display: none !important;
+}
 .hide-unmarked li:not(.has-unit) {
   display: none;
 }
