--- a/_includes/card-hero.html
+++ b/_includes/card-hero.html
@@ -1,7 +1,7 @@
 {% assign c = include.card %}
 {% assign page = c.characterId | characterIdToPage %}
 {% assign title = c.stockId | stockIdToCharaTitle: 1 %}
-<li data-id="{{ c.stockId }}" data-rarity="{{ c.rarity }}" data-element="{{ c.element }}" data-name="{{ title | escape }}">
+<li data-id="{{ c.stockId }}" data-rarity="{{ c.rarity }}" data-element="{{ c.element }}" data-name="{{ title | escape }}" data-role="{{ c.role }}">
 <div class="hero-icon {{ include.class }}">
   <div class="chara-border hero-{{ c.rarity }}"></div>
   <img class="hero-chara-icon" src="/cdn/Sprite/icon_{{ c.resourceName }}_h01.png" loading="lazy">
