--- a/assets/main.scss
+++ b/assets/main.scss
@@ -353,6 +353,14 @@ figcaption {
 .translate {
   cursor: pointer;
 }
+.masked {
+  background-color: #000;
+  color: #000;
+  transition: color 0.13s;
+}
+.masked:hover {
+  color: #fff;
+}
 // Hero page
 .heroBox {
   display: inline-block;
