--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -15,6 +15,8 @@
 {% assign stockId = include.stockId | downcase %}
 {% assign cardProfileOverride = site.data.processed.CardProfileOverride[stockId].hero %}
 {% assign overrideIllustrator = site.data.processed.jp_profile[cardProfileOverride.illustrator] %}
+{% assign overrideAffiliation = site.data.processed.jp_profile[cardProfileOverride.affiliation] %}
+{% assign overridejob = site.data.processed.jp_profile[cardProfileOverride.job] %}
 
 <div id="h{{ include.stockId }}" role="tabpanel" tabindex="0"  class="tabcontent contain element{{ firstCardInfo.element }}">
     <div class="heroinfobox">
@@ -41,11 +43,11 @@
                 </tr>
                 <tr>
                     <th colspan="2">Occupation</th>
-                    <td colspan="2">{% if include.masked %}???{% elsif a %}{{ firstCardInfo.job }}{% endif %}</td>
+                    <td colspan="2">{% if overridejob %}<span class="masked">{% endif %}{{ firstCardInfo.job }}{% if overridejob %}</span>{% endif %}</td>
                 </tr>
                 <tr>
                     <th colspan="2">Affliation office</th>
-                    <td colspan="2">{% include chara-affiliation.html masked=page.masked affiliation=firstCardInfo.affiliationOffice %}</td>
+                    <td colspan="2">{% include chara-affiliation.html affiliation=firstCardInfo.affiliationOffice override=overrideAffiliation %}</td>
                 </tr>
             </tbody>
         </table>
