Tweak skill tree table

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
-$color50: #e3f2fd;
+$color50: #e5e5e5;
 $colorLight: #ffd95b;
 $colorPrimary: #ffa726;
 $colorDark: #c77800;
@@ -473,10 +473,7 @@ $elementColor: #f07d75, #88bcff, #5fcb58, #ffb251, #b88dff;
   padding: 10px;
 }
 .skill_tree tr:nth-child(odd) td {
-  background: #f5f5f5;
-}
-.skill_tree tr:nth-child(even) td {
-  background: #fff;
+  background: $color50;
 }
 .skill_tree table {
   margin: 0;
