--- a/_includes/skill-timing.html
+++ b/_includes/skill-timing.html
@@ -47,6 +47,8 @@ Always active
 current action end
 {% when 33 %}
 when an ally is damaged
+{% when 34 %}
+after activating a skill that deal damages
 {% else %}
 unknown timing ({{ include.timing }})
 {% endcase %}
