--- a/_includes/skill-table-v2.html
+++ b/_includes/skill-table-v2.html
@@ -10,7 +10,7 @@
 {% assign nid = id | plus: 0 %}
 {% assign sid = id | downcase %}
 {% assign skill = site.data.SkillMaster[sid] %}
-{% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
+{% assign skillName = site.data.translation.Skill[sid].skillName %}
     <div title="{{ sid }}" class="translate re-A" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</div>
     <div class="re-C">{{ skill.useView}}</div>
     <div class="re-B" title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skillId=nid skill=skill %}</div>
