--- a/_includes/skill-table.html
+++ b/_includes/skill-table.html
@@ -12,7 +12,7 @@
     {% assign nid = id | plus: 0 %}
     {% assign sid = id | downcase %}
     {% assign skill = site.data.SkillMaster[sid] %}
-    {% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
+    {% assign skillName = site.data.translation.Skill[sid].skillName %}
     <tr>
         <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td>
         <td title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skillId=nid skill=skill %}</td>
