Add skill v2 whitelist

--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -166,7 +166,7 @@
 {% endif %}
 {% endfor %}
 
-{% if passiveSkillIds.size > 0 %}
+{% if !site.data.translation.SkillV2Whitelist[stockId] && passiveSkillIds.size > 0 %}
 <h3>Passive skills</h3>
 {% include skill-table-v2.html skillIds=passiveSkillIds hide_banner=true %}
 {% endif %}
