--- a/_includes/skill-table-manual.html
+++ b/_includes/skill-table-manual.html
@@ -1,7 +1,7 @@
 <table>
     <tr><th colspan="3">Main skills</th></tr>
     <tr>
-        <th>Skill Name</th><th>Effect/Proc rate</th><th>View cost</th>
+        <th>Skill Name</th><th>Skill Description</th><th>View cost</th>
     </tr>
     {% assign skillIds = include.skillIds | split: "," %}
     {% for id in skillIds %}
