Highlight wiki-enhance

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -404,6 +404,9 @@ figcaption {
   grid-auto-flow: dense;
   margin-bottom: 20px;
 }
+.re-table wiki-enhance {
+  background: $colorLight;
+}
 .re-A, .re-B, .re-C, .re-split {
   padding: 10px;
   border-bottom: 1px solid $text;
