--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -102,14 +102,16 @@
     <h3>Active</h3>
     {% include skill-table-v2.html skillIds=skillIdsActive %}
  
-    {% if include.extraActiveSkillIds %}
+    {% if site.data.translation.SkillV2Whitelist.sidekicks[stockId] != true and include.extraActiveSkillIds.size > 0 %}
+    <!-- {{ passiveSkillIds | jsonify }} -->
     {% include skill-table-v2.html skillIds=include.extraActiveSkillIds hide_banner=true %}
     {% endif %}
 
     <h3>Passive</h3>
     {% include skill-table-v2.html skillIds=skillIdsPassive %}
 
-    {% if lastCardInfo.equipmentAppendSkills.size > 0 %}
+    {% if site.data.translation.SkillV2Whitelist.sidekicks[stockId] != true and lastCardInfo.equipmentAppendSkills.size > 0 %}
+    <!-- {{ passiveSkillIds | jsonify }} -->
     {% assign extraPassiveSkillIds = "" | split: "," | push: lastCardInfo.equipmentAppendSkills[0] %}
     {% include skill-table-v2.html skillIds=extraPassiveSkillIds hide_banner=true %}
     {% endif %}
