--- a/_includes/skill-description.html
+++ b/_includes/skill-description.html
@@ -1,5 +1,28 @@
+{% assign skillS = include.skillId | downcase %}
+{% assign skillV2 = site.data.translation.Skill[skillS] %}
 {% assign skillOverride = site.data.wiki.SkillManualOverride[include.skillId] %}
-{% if skillOverride %}{{ skillOverride | render_liquid }}{% else %}
+
+{% if skillV2.description %}
+
+  {{ skillV2.description }}
+  {% assign status_array = "" | split: "," %}
+  {% for effect in include.skill.effects %}
+    {% assign skillEffectId = effect.skillEffectId | downcase %}
+    {% assign skillEffect = site.data.SkillEffectMaster[skillEffectId] %}
+    {% assign skillEffectJson = skillEffect.skillEffectJson %}
+
+    {% if skillEffectJson.statusId == 0 %}
+      {% continue %}
+    {% endif %}
+
+    {% assign status = skillEffectId | status_description_v2: skillEffectJson %}
+    {% assign status_array = status_array | push: status %}
+  {% endfor %}
+  {% if status_array.size > 0 %}
+    <hr>{{ status_array | join: ", " }}
+  {% endif %}
+
+{% elsif skillOverride %}{{ skillOverride | render_liquid }}{% else %}
 
 {% assign randomGroups = include.skill.effects | group_by: "randomGroupId" %}
 
