--- a/_includes/skill-table-v2.html
+++ b/_includes/skill-table-v2.html
@@ -1,18 +1,18 @@
-{% unless include.hide_banner == true %}
-<p>Hover over the effect description to see original japanese description. Please help report any bug related to skill effect or suggestion on rewording skill description <a href="https://docs.google.com/spreadsheets/d/1gnic8BbN0-cPrj9XGjxVjjU50L8fiD4hRQDMUR2P37s/edit#gid=0">here</a>.</p>
-
-<p>Want to help in translating skill names? Please see <a href="https://gidivub.com/liveahero-wiki/liveahero-wiki.gidivub.io/issues/26">here</a>.</p>
-{% endunless %}
-
+{% if include.split != true or include.first == true %}
 <div class="re-table">
-    <div class="re-A re-head">Skill Name</div><div class="re-C re-head">View cost</div><div class="re-B re-head">Effect/Proc rate</div>
+    <div class="re-A re-head">Skill Name</div><div class="re-C re-head">View cost</div><div class="re-B re-head">Skill Description</div>
+{% endif %}
+
 {% for id in include.skillIds %}
 {% assign nid = id | plus: 0 %}
 {% assign sid = id | downcase %}
 {% assign skill = site.data.SkillMaster[sid] %}
-{% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
+{% assign skillName = site.data.translation.Skill[sid].skillName %}
     <div title="{{ sid }}" class="translate re-A" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</div>
     <div class="re-C">{{ skill.useView}}</div>
     <div class="re-B" title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skillId=nid skill=skill %}</div>
 {% endfor %}
+
+{% if include.split != true or include.last == true %}
 </div>
+{% endif %}
