--- a/_includes/hero-element.html
+++ b/_includes/hero-element.html
@@ -6,9 +6,9 @@ Water
 {% when 3 %}
 Wood
 {% when 4 %}
-Aether
+Light
 {% when 5 %}
-Nether
+Shadow
 {% else %}
 Unknown element ({{ include.element }})
 {% endcase %}
