--- a/assets/main.scss
+++ b/assets/main.scss
@@ -344,6 +344,9 @@ figure {
   margin: 0;
   margin-bottom: 30px;
 }
+figure img {
+  width: 100%;
+}
 figcaption {
   font-size: 13px;
   background-color: #fff9c4;
