--- a/assets/main.scss
+++ b/assets/main.scss
@@ -345,7 +345,8 @@ figure {
   margin-bottom: 30px;
 }
 figure img {
-  width: 100%;
+  display: block;
+  margin: auto;
 }
 figcaption {
   font-size: 13px;
