--- a/assets/main.scss
+++ b/assets/main.scss
@@ -288,8 +288,11 @@ details {
   contain: content;
   border: 1px solid #aaa;
 
-  p, ul, ol, table {
+  p, ul, ol, table, blockquote {
     margin: 15px;
+  }
+  blockquote {
+    padding: 1px;
   }
 
   table {
