Update wiki header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content{% if page.wide_content %}__wider{% endif %}">
     <aside class="wiki-msg">    
-        LAH community survey and popularity poll (2024 edition) has ended, result will be compiled and released in Wiki Blog in about a month.</aside>
+        <a href="/blog/2024/community-survey-2024/">Report for LAH community survey and popularity poll (2024 edition)</a> is published!</aside>
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
