[ci skip] add skillA skillB to voice-table.html

--- a/_includes/voice-table.html
+++ b/_includes/voice-table.html
@@ -1,7 +1,7 @@
 {% assign whitelist = "APPRECIATION,DAILY,EVENTA,EVENTB,EVENTC,EVENTD,HERO,HERO2,PLAYER,PLAYER2,RELATION,TOUCH,TOUCH2,TRAIN,TRAINED" | split: "," %}
 {% assign names = include.resourceName | split: "," %}
 
-{% assign manual = "battleStart,action,attack,skill,special,smallDamage,bigDamage,win,lose,assist,assisted,loveIndexMax,rankMax,salesStart,salesEnd" | split: "," %}
+{% assign manual = "battleStart,action,attack,skill,skillA,skillB,special,smallDamage,bigDamage,win,lose,assist,assisted,loveIndexMax,rankMax,salesStart,salesEnd" | split: "," %}
 {% assign greeting = "h_gachaResult,s_gachaResult" | split: "," %}
 
 <h2>Voice Lines ({{ names | join: ", " }})</h2>
