--- a/_includes/skill-table-manual.html
+++ b/_includes/skill-table-manual.html
@@ -10,7 +10,9 @@
     {% assign skill = site.data.SkillMaster[sid] %}
     {% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
     <tr>
-        <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td><td title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skill=skill %}</td><td>{{ skill.useView }}</td>
+        <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td>
+        <td title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skillId=nid skill=skill %}</td>
+        <td>{{ skill.useView }}</td>
     </tr>
     {% endfor %}
     {% if include.equipmentSkills %}
@@ -22,7 +24,9 @@
     {% assign skill = site.data.SkillMaster[sid] %}
     {% assign skillName = site.data.wiki.SkillNameTranslation[nid] %}
     <tr>
-        <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td><td title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skill=skill %}</td><td>{{ skill.useView }}</td>
+        <td title="{{ sid }}" class="translate" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{ skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</td>
+        <td title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skillId=nid skill=skill %}</td>
+        <td>{{ skill.useView }}</td>
     </tr>
     {% endfor %}
     {% endif %}
