New status layout

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -643,8 +643,13 @@ $elementName: fire, water, earth, light, shadow;
   text-underline-offset: 2px;
   cursor: help;
   img {
+    width: 2em;
     height: 2em;
     vertical-align: middle;
+  }
+  .status-s {
+    width: 1.5em;
+    height: 1.5em;
   }
 }
 .status span {
