--- a/_includes/skill-description.html
+++ b/_includes/skill-description.html
@@ -4,7 +4,6 @@
 
 {% if skillV2.description %}
 
-  {{ skillV2.description }}
   {% assign status_array = "" | split: "," %}
   {% for effect in include.skill.effects %}
     {% assign skillEffectId = effect.skillEffectId | downcase %}
@@ -20,9 +19,7 @@
       {% assign status_array = status_array | push: status %}
     {% endif %}
   {% endfor %}
-  {% if status_array.size > 0 %}
-    <hr>{{ status_array | join: ", " }}
-  {% endif %}
+  {{ skillV2.description | render_skill_description: status_array }}
 
 {% elsif skillOverride %}{{ skillOverride | render_liquid }}{% else %}
 
