--- a/_includes/skill-table-v2.html
+++ b/_includes/skill-table-v2.html
@@ -10,7 +10,7 @@
 {% assign skillName = site.data.translation.Skill[sid].skillName %}
     <div title="{{ sid }}" class="translate re-A" data-translate="{% if skillName %}{{ skill.skillName }}{% endif %}" data-effects="{{skill.effects | map: 'skillEffectId' | join: ',' }}">{{ skillName | default: skill.skillName }}</div>
     <div class="re-C">{{ skill.useView}}</div>
-    <div class="re-B" title="{{ skill.description | sanitizeSkillDescription }}">{% include skill-description.html skillId=nid skill=skill %}</div>
+    <div class="re-B">{% include skill-description.html skillId=nid skill=skill %}</div>
 {% endfor %}
 
 {% if include.split != true or include.last == true %}
