--- a/assets/main.scss
+++ b/assets/main.scss
@@ -372,9 +372,11 @@ figcaption {
   background-color: #000;
   color: #000;
   transition: color 0.13s;
+  filter: brightness(0);
 }
 .masked:hover {
   color: #fff;
+  filter: none;
 }
 // Hero page
 .heroBox {
