--- a/_includes/header.html
+++ b/_includes/header.html
@@ -163,6 +163,9 @@
           <li>
             <a href="/guide/unexplored/">Unexplored</a>
           </li>
+          <li>
+            <a href="/guide/library/">???'s Notes</a>
+          </li>
         </ul>
         <h3 class="section__header">Tools</h3>
         <ul>
