--- a/_includes/library-info.html
+++ b/_includes/library-info.html
@@ -3,6 +3,6 @@
 {%- capture page_key %}LIBRARY_PAGE_{{include.key}}{% endcapture %}
 {%- assign title = site.data.processed.jp_library[title_key] | default: include.key | replace: "<@playerName>", "<code>Player</code>" %}
 {%- assign page = site.data.processed.jp_library[page_key] | replace: "<@playerName>", "<code>Player</code>" %}
-<summary>{{ title }}</summary>
+<summary><span class="item"><img src="/cdn/Sprite/ui_icon_note.png"></span> {{ title }}</summary>
 <p>{{ page }}</p>
 </details>
