--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@ layout: compress
 {% include header.html %}
 <main class="content__area">
 <div class="content{% if page.wide_content %}__wider{% endif %}">
-    <!--<aside class="wiki-msg">    
-        <a href="/blog/2024/community-survey-2024/">Report for LAH community survey and popularity poll (2024 edition)</a> is published!</aside>
-    </aside>-->
+    <aside class="wiki-msg">    
+        <a href="/survey/2025/">LAH community survey and popularity poll (2025 edition)</a> is open till (28 Sep 2025)! Please take some time to fill it out!</aside>
+    </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
         <span aria-hidden="true"><svg height="16" viewBox="0 0 12 16" width="12" xmlns="http://www.w3.org/2000/svg"><path d="m11.41 9h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm0-4h-10.82c-.59 0-.59-.41-.59-1s0-1 .59-1h10.81c.59 0 .59.41.59 1s0 1-.59 1zm-10.82 6h10.81c.59 0 .59.41.59 1s0 1-.59 1h-10.81c-.59 0-.59-.41-.59-1s0-1 .59-1z"/></svg></span>
