--- a/assets/main.scss
+++ b/assets/main.scss
@@ -347,6 +347,10 @@ figure {
   margin: 0;
   margin-bottom: 30px;
 }
+.clip-img {
+  aspect-ratio: 3/2;
+  overflow-y: scroll;
+}
 figure img {
   display: block;
   margin: auto;
