Change wiki msg

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content{% if page.wide_content %}__wider{% endif %}">
     <aside class="wiki-msg">    
-        <a href="/survey/2025/">LAH community survey and popularity poll (2025 edition)</a> is open till (28 Sep 2025)! Please take some time to fill it out!</aside>
+        LAH community survey and popularity poll (2025 edition) has ended. Results will be published by the end of October 2025.
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
